# rust_bookplate_script

./: .gitignore  README.md  dotenv_sample_file
rust_manager/: Cargo.toml  build.rs  rustfmt.toml
rust_manager/src/: helpers.rs  logger.rs  main.rs  marc_xml_reader.rs
selenium_tests/: test_existenceasserts_09.py
