## See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "bookplate_script_runner"
version = "0.1.0"
edition = "2021"

## build-script to enable github version to display with --version arg
build = "build.rs"

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.18", features = ["derive"] }
dotenvy = "0.15.7"
flate2 = "1.0.28"
log = "0.4.20"
marc = "3.1.1"
regex = " 1.10.3"
serde = { version = "1.0.196", features = ["derive"] }
serde-xml-rs = "0.6.0"
tar = "0.4.40"